--- a/flyers_cocktail.html
+++ b/flyers_cocktail.html
@@ -425,44 +425,77 @@
     <section>
       <div class="faq-container">
         <div class="faq-grid">
-          <div class="faq">
-            <p>HOW WILL FLYERS MAKE ME FEEL?</p>
-            <div>
-              <svg class="theme-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M2 12L23.2826 36.0527C23.3724 36.1542 23.4826 36.2354 23.6062 36.291C23.7297 36.3467 23.8636 36.3755 23.999 36.3755C24.1345 36.3755 24.2684 36.3467 24.3919 36.291C24.5154 36.2354 24.6257 36.1542 24.7155 36.0527L46 12"
-                  stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-              </svg>
+          <div class="faq-card">
+            <button class="faq-click">
+              <p>HOW WILL FLYERS MAKE ME FEEL?</p>
+              <div>
+                <svg class="arrow theme-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M2 12L23.2826 36.0527C23.3724 36.1542 23.4826 36.2354 23.6062 36.291C23.7297 36.3467 23.8636 36.3755 23.999 36.3755C24.1345 36.3755 24.2684 36.3467 24.3919 36.291C24.5154 36.2354 24.6257 36.1542 24.7155 36.0527L46 12"
+                    stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+              </div>
+            </button>
+            <div class="answer">
+              <p>
+                Crafted with 5mg of hemp-derived effect, we formulated our cocktails to bring you a light sense of
+                euphoria and relaxation. With our nanotech, you should start to feel these effects within 15 minutes and
+                last for about 45 minutes. Please note, this can vary person to person.
+              </p>
             </div>
           </div>
-          <div class="faq">
-            <p>HOW MANY COCKTAILS SHOULD I DRINK?</p>
-            <div>
-              <svg class="theme-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M2 12L23.2826 36.0527C23.3724 36.1542 23.4826 36.2354 23.6062 36.291C23.7297 36.3467 23.8636 36.3755 23.999 36.3755C24.1345 36.3755 24.2684 36.3467 24.3919 36.291C24.5154 36.2354 24.6257 36.1542 24.7155 36.0527L46 12"
-                  stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-              </svg>
+          <div class="faq-card">
+            <button class="faq-click">
+              <p>HOW MANY COCKTAILS SHOULD I DRINK?</p>
+              <div>
+                <svg class="arrow theme-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M2 12L23.2826 36.0527C23.3724 36.1542 23.4826 36.2354 23.6062 36.291C23.7297 36.3467 23.8636 36.3755 23.999 36.3755C24.1345 36.3755 24.2684 36.3467 24.3919 36.291C24.5154 36.2354 24.6257 36.1542 24.7155 36.0527L46 12"
+                    stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+              </div>
+            </button>
+            <div class="answer">
+              <p>
+                We recommend starting with a half or full can to feel the effects first before drinking another.
+              </p>
             </div>
           </div>
-          <div class="faq">
-            <p>WHAT ELSE IS IN FLYERS COCKTAILS?</p>
-            <div>
-              <svg class="theme-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M2 12L23.2826 36.0527C23.3724 36.1542 23.4826 36.2354 23.6062 36.291C23.7297 36.3467 23.8636 36.3755 23.999 36.3755C24.1345 36.3755 24.2684 36.3467 24.3919 36.291C24.5154 36.2354 24.6257 36.1542 24.7155 36.0527L46 12"
-                  stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-              </svg>
+          <div class="faq-card">
+            <button class="faq-click">
+              <p>WHAT ELSE IS IN FLYERS COCKTAILS?</p>
+              <div>
+                <svg class="arrow theme-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M2 12L23.2826 36.0527C23.3724 36.1542 23.4826 36.2354 23.6062 36.291C23.7297 36.3467 23.8636 36.3755 23.999 36.3755C24.1345 36.3755 24.2684 36.3467 24.3919 36.291C24.5154 36.2354 24.6257 36.1542 24.7155 36.0527L46 12"
+                    stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+              </div>
+            </button>
+            <div class="answer">
+              <p>
+                Besides our hemp-derived effect, our cocktails are crafted with natural ingredients expertly measured by
+                our Chief Flavor Officer to deliver award winning taste & perfect feel. Scan our can’s QR code to see
+                our testing results.
+              </p>
             </div>
           </div>
-          <div class="faq">
-            <p>I'M UNDER 21, CAN I DRINK FLYERS?</p>
-            <div>
-              <svg class="theme-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M2 12L23.2826 36.0527C23.3724 36.1542 23.4826 36.2354 23.6062 36.291C23.7297 36.3467 23.8636 36.3755 23.999 36.3755C24.1345 36.3755 24.2684 36.3467 24.3919 36.291C24.5154 36.2354 24.6257 36.1542 24.7155 36.0527L46 12"
-                  stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-              </svg>
+          <div class="faq-card">
+            <button class="faq-click">
+              <p>I'M UNDER 21, CAN I DRINK FLYERS?</p>
+              <div>
+                <svg class="arrow theme-icon" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M2 12L23.2826 36.0527C23.3724 36.1542 23.4826 36.2354 23.6062 36.291C23.7297 36.3467 23.8636 36.3755 23.999 36.3755C24.1345 36.3755 24.2684 36.3467 24.3919 36.291C24.5154 36.2354 24.6257 36.1542 24.7155 36.0527L46 12"
+                    stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                </svg>
+              </div>
+            </button>
+            <div class="answer">
+              <p>
+                While we appreciate the enthusiasm, the law is a little less eager. Sit back and wait until your 21st
+                birthday, and perhaps ask your friends and family to hook you up on your special day.
+              </p>
             </div>
           </div>
         </div>
